2005-02-24  Matthew Mueller  <donut@dakotacom.net>

	* arch/ogl/gr.c: restore gamma ramp on exit since some drivers
	don't do it automatically (eg, ati's fglrx linux driver) (d1x
	r1.41)

2005-02-24  Bradley Bell  <btb@icculus.org>

	* main/movie.c: change movie Warnings to con_printf, simplify
	other debug info.

2005-02-24  Chris Taylor  <chris@icculus.org>

	* 2d/pcx.c, arch/ogl/gr.c, main/config.c, main/inferno.c, 
	main/newdemo.c, include/physfsx.h, include/cfile.h, main/playsave.c, 
	main/state.c, misc/args.c: use PHYSFSX_openReadBuffered and 
	PHYSFSX_openWriteBuffered, where appropriate

	* main/gauges.c: draw behind the shield number properly with OpenGL

	* main/gauges.c: draw the bomb count in OpenGL, but not when a bomb
	is selected as a secondary weapon

2005-02-11  Bradley Bell  <btb@icculus.org>

	* debian/control: build-dep on libphysfs-dev

	* arch/ogl/gr.c: use GLint for arb_max_textures

	* arch/ogl/Makefile.am: added internal.h to dist

	* Makefile.am, arch/win32/Makefile.am: remove old files from dist

2005-01-25  Chris Taylor  <c.taylor@student.curtin.edu.au>

	* arch/carbon/conf.h, arch/ogl/gr.c, include/loadgl.h: on Carbon,
	dynamically find and load the OpenGL library on carbon

	* main/editor/macro.c: use physfs instead of non-existing cflib.h

	* main/editor/medwall.c: use wall_close_door_num, not wall_close_door

	* main/editor/medwall.c: include cntrlcen.h

	* ui/barbox.c, ui/number.c: pass int*, not short* to gr_get_string_size

	* include/ui.h, ui/barbox.c: make ui_barbox_update return void

	* patching file ui/file.c, ui/listbox.c, file ui/mouse.c, ui/scroll.c,
	ui/window.c: use timer_get_fixed_seconds instead of TICKER macro

	* ui/number.c: s/inputbox/Inputbox/

	* ui/ui.c: InstallErrorHandler() no longer exists, don't use it anymore

	* main/bmread.c: externalize N_ObjBitmaps & remove_char, solve conflict

	* main/editor/autosave.c, main/editor/editor.h, main/editor/group.c,