@@ -1,3 +1,7 @@
+2005-02-24  Peter Hawkins  <peterh@isa.net.au>
+
+	* arch/linux/alsadigi.c: update to alsa 1.0 API. (d1x r1.3)
+
 2005-02-24  Matthew Mueller  <donut@dakotacom.net>
 
 	* arch/ogl/gr.c: restore gamma ramp on exit since some drivers
